--- a/index.html
+++ b/index.html
@@ -6,10 +6,15 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <p id="currentPlayer"></p>
     <canvas id="gameCanvas" width="600" height="600"></canvas>
-    <button id="rollDice">Würfeln</button>
-    <p id="diceResult"></p>
-    <script src="field.js"></script>
+    <img id="diceImage" alt="Würfel" />
+    <script src="js/field.js"></script>
+    <script src="js/diceLogic.js"></script>
+    <script src="js/drawing.js"></script>
+    <script src="js/gameSetup.js"></script>
+    <script src="js/gameLogic.js"></script>
+    <script src="js/playerLogic.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
