Begin with calculating valid moves

--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     <p id="currentPlayer"></p>
     <canvas id="gameCanvas" width="600" height="600"></canvas>
     <img id="diceImage" alt="Würfel" />
-    <script src="js/field.js"></script>
+    <script src="js/classes/field.js"></script>
+    <script src="js/classes/piece.js"></script>
     <script src="js/diceLogic.js"></script>
-    <script src="js/drawing.js"></script>
     <script src="js/gameSetup.js"></script>
     <script src="js/gameLogic.js"></script>
     <script src="js/playerLogic.js"></script>
