Begin complex computation of moving forward on the board

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <p id="currentPlayer"></p>
+    <p id="currentColor"></p>
     <canvas id="gameCanvas" width="600" height="600"></canvas>
     <img id="diceImage" alt="Würfel" />
     <script src="js/classes/field.js"></script>
@@ -14,7 +14,6 @@
     <script src="js/diceLogic.js"></script>
     <script src="js/gameSetup.js"></script>
     <script src="js/gameLogic.js"></script>
-    <script src="js/playerLogic.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
