Add game infos to the sidebar

--- a/index.html
+++ b/index.html
@@ -19,6 +19,14 @@
         <div class="container">
             <aside class="sidebar">
                 <p id="currentColor"></p>
+                <b>Spielinfos:</b> <br>
+                Klicke auf den Würfel, um zu würfeln. <br>
+                Danach ziehe eine Figur deiner Wahl mit drag-and-drop auf ein gültiges Feld. <br>
+                Du kannst nur mit einer 6 rauskommen. <br>
+                Wenn du keinen Zug machen kannst, darfst du insg. 3x würfeln, bevor der nächste Spieler dran ist. <br>
+                Es gelten die üblichen Mensch-Ärgere-Dich-Nicht Regeln. <br>
+                <br>
+                <b>Viel Spaß beim Spielen!</b>
             </aside>
             <section class="boardSection">
                 <canvas id="gameCanvas" width="500px" height="500px"></canvas>
