--- a/index.html
+++ b/index.html
@@ -1,3 +1,6 @@
+<!--
+    This is the main html file.
+-->
 <!DOCTYPE html>
 <html lang="de">
 <head>
@@ -17,6 +20,7 @@
     </header>
     <main>
         <div class="container">
+            <!-- Sidebar -->
             <aside class="sidebar">
                 <p id="currentColor"></p>
                 <b>Spielinfos:</b> <br>
@@ -28,9 +32,11 @@
                 <br>
                 <b>Viel Spaß beim Spielen!</b>
             </aside>
+            <!-- Game board -->
             <section class="boardSection">
                 <canvas id="gameCanvas" width="500px" height="500px"></canvas>
             </section>
+            <!-- Dice -->
             <section class="diceSection">
                 <img id="diceImage" alt="Würfel" />
             </section>
