Add 'Roll the dice' message and try to resize canvas based on screen width (NOT WORKING)

--- a/index.html
+++ b/index.html
@@ -38,7 +38,9 @@
             </section>
             <!-- Dice -->
             <section class="diceSection">
+                <p id="rollDiceMessageParagraph" class="rollDiceMessage"><b>Wirf den Würfel!</b></p>
                 <img id="diceImage" alt="Würfel" />
+                <div id="rollDiceMessageHelperDiv" class="rollDiceMessage"></div>
             </section>
         </div>
     </main>
