--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
                 Es gelten die üblichen Mensch-Ärgere-Dich-Nicht Regeln. <br>
                 <br>
                 <b>Viel Spaß beim Spielen!</b>
+                <p id="winMessage"></p>
             </aside>
             <!-- Game board -->
             <section class="boardSection">
