Implement rule that a player can roll the dice again when having a 6

--- a/index.html
+++ b/index.html
@@ -26,10 +26,11 @@
                 <p id="currentColor"></p>
                 <b>Spielinfos:</b> <br>
                 Klicke auf den Würfel, um zu würfeln. <br>
-                Danach ziehe eine Figur deiner Wahl mit drag-and-drop auf ein gültiges Feld. <br>
-                Du kannst nur mit einer 6 rauskommen. <br>
-                Wenn du keinen Zug machen kannst, darfst du insg. 3x würfeln, bevor der nächste Spieler dran ist. <br>
-                Es gelten die üblichen Mensch-Ärgere-Dich-Nicht Regeln. <br>
+                Danach ziehe eine Figur deiner Wahl per drag-and-drop auf ein gültiges Feld. <br>
+                Du kannst nur mit einer 6 raus kommen. <br>
+                Wenn alle deine Figuren im Haus sind, darfst du insg. 3x würfeln, bevor der nächste Spieler dran ist. <br>
+                Wenn du eine 6 gewürfelt hast, darfst du noch einmal würfeln. <br>
+                Du hast gewonnen, wenn alle deine Figuren im Ziel sind. <br>
                 <br>
                 <b>Viel Spaß beim Spielen!</b>
                 <p id="winMessage"></p>
